examples/fail/semantic/break_outside_loop.bina
// EXPECT_SEMANTIC_ERROR: break outside loop
fn main() -> int {
    break;
    return 0;
}
